--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -4,7 +4,7 @@
 			<View id="main">
 				<View id="daily_background" width="Ti.UI.FILL" height="Ti.UI.FILL"></View>
 				<View layout="">
-					<ImageView id="logo" width="100" height="100" top="10" left="10" image="/appicon-60@3x.png" zIndex="5" />
+					<ImageView id="logo" borderRadius="10" width="100" height="100" top="10" left="10" image="/appicon-60@3x.png" zIndex="5" />
 					<View zIndex="4" id="myinfo_view" layout="horizontal" height="Ti.UI.SIZE" top="20" backgroundColor="rgba(0,0,0,0.5)"> 
 						<!--<View height="40" id="fbloginView" />-->
 						<View layout="horizontal" left="110" width="auto" top="10" bottom="10" height="Ti.UI.SIZE" id="myInfo" />
