--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -11,7 +11,7 @@
 		    	<Label top="5" text="Loading" color="#ffffff" />
 		    </View>
 			<ScrollView id="main" layout="vertical" height="100%" contentHeight="Ti.UI.SIZE">
-				<ImageView width="40%" height="Ti.UI.SIZE" backgroundColor="#ff0000" bottom="30dp" top="30dp" image="appicon-76@2x.png"></ImageView>
+				<ImageView width="40%" borderRadius="10" height="Ti.UI.SIZE" backgroundColor="#ff0000" bottom="30dp" top="30dp" image="appicon-76@2x.png"></ImageView>
 				<TextField id="email" hintText="Enter Email" value="" /><!--asplux@corpdemo.com -->
 				<TextField id="password" hintText="Enter Password" value="" /><!--asplux123 -->
 				<Button id="loginAccountButton" borderRadius="5" backgroundColor="#CC2228" onTouchend="doLogin" title="Login"  width="70%" top="20" height="40" color="#ffffff" />
