--- a/app/views/hra_detail.xml
+++ b/app/views/hra_detail.xml
@@ -1,12 +1,12 @@
 <Alloy>
 	<Window title="" backButtonTitle="" id="hraDetailsWin" class="container" navTintColor="#CE1D1C">
 		<View height="Ti.UI.FILL" width="Ti.UI.FILL" layout="vertical">
-			<View layout="horizontal" height="50" width="100%" backgroundColor="#DEDEDE" > 
+			<View layout="horizontal" height="50" width="100%" backgroundColor="#DEDEDE" platform="android" > 
 				<View left="0" width="10%">
 		         	<ImageView left='10' id="btnBack" width="25" height="25" image="/images/btn-back.png" />
 		   		</View>
 		     	<View id="pageTitle" width="Ti.UI.FILL">
-		     		<Label id="hraTitle" height="Ti.UI.SIZE" class='normal_font' textAlign="center">Health Info</Label>
+		     		<Label id="hraTitle" height="Ti.UI.SIZE" class='normal_font' textAlign="center"></Label>
 		     	</View> 
 		 	</View> 
 		 	<ScrollView height="Ti.UI.FILL" width="Ti.UI.FILL" contentHeight="Ti.UI.SIZE" contentWidth="Ti.UI.FILL" layout="vertical" >
